--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
  <head>
   <meta charset="utf-8">
   <title>My First BitStarter</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no.icons.min.css">
   <link type="text/css" rel="stylesheet"
         href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+
+
+
+twitter.github.io/bootstrap/ scaffolding.html#responsive
+
+
+
   <style type="text/css">
     body {
      padding-top: 20px;
