--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
           <div class="accordion-group">
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse"
-                 data-parant="#accordion2" href="#collapseOne">
+                 data-parent="#accordion2" href="#collapseOne">
                 What does FAQ stand for?
               </a>
             </div>
             <div id="collapseOne" class="accordion-body collapse">
               <div class="accordion-inner">
-                Frequently Asked Questions.
+                Frequently Asked Question.
               </div>
             </div>
           </div>
