--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="utf-8">
-  <title>manage you maintenace work</title>
+  <title>Manage You Maintenace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -112,7 +112,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="brand" href="#">ManageYouMaintenance</a>
+        <a class="brand" href="#">Manage Your Maintenance</a>
         <div class="nav-collapse collapse">
           <ul class="nav">
             <li class="active"><a href="#">Home</a></li>
@@ -133,14 +133,14 @@
          www.google.com/fonts/specimen/Ubuntu#parings -->
     <div class="row-fluid heading">
       <div class="span12">
-        <h1>Manage You Maintainace</h1>
+        <h1>Manage Your Maintenance</h1>
       </div>
     </div>
     <div class="row-fluid subheading">
       <div class="span12">
         <!-- special typography for bootstrap for lead paragraph
              http://twitter.github.io/bootstrap/base-css.html#typography -->
-        <p class="lead">Keep all you equiment up to date.</p>
+        <p class="lead">Keep all you equipment up to date.</p>
       </div>
     </div>
     <div class="row-fluid pitch">
@@ -162,12 +162,12 @@
             </div>
             <div class="span4">
               <div class="linediv-c">
-                <h3>$6000</h3> <p>of $10,000</p>
+                <h3>$2000</h3> <p>of $10,000</p>
               </div>
             </div>
             <div class="span4">
               <div class="linediv-r">
-                <h3>10</h3> <p>days left</p>
+                <h3>40</h3> <p>days left</p>
               </div>
             </div>
           </div>
@@ -176,8 +176,8 @@
           <!-- bootstrap progress bar
                http://twitter.github.io/bootstrap/components.html#progress -->
           <div class="thermometer progress active">
-            <div class="bar bar-success" style="width: 60%;"></div>
-            <div class="bar bar-warning" style="width: 40%;"></div>
+            <div class="bar bar-success" style="width: 20%;"></div>
+            <div class="bar bar-warning" style="width: 80%;"></div>
           </div>
         </div>
         <div class="span6 offset3 order">
@@ -204,6 +204,16 @@
       </div>
       <div class="span5 copy">
         <p>
+	  Your equipment in your firm is you capital. 
+	If one maschine does not work properly you will loose money.
+	So, keeping that equipment always up to date is very important.
+	Maintenance is a key feature for a prospering business.
+
+	But how to keep an eye on all you devices?
+	Which one was exchanged last month?
+	When will be the next maintenance appointment?
+	 
+	
           that is now 
           an explanation
           of the procuct
