--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="utf-8">
-  <title>Manage You Maintenace</title>
+  <title>Manage You Maintenance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -140,12 +140,12 @@
       <div class="span12">
         <!-- special typography for bootstrap for lead paragraph
              http://twitter.github.io/bootstrap/base-css.html#typography -->
-        <p class="lead">Keep all you equipment up to date.</p>
+        <p class="lead">Keep you equipment up to date.</p>
       </div>
     </div>
     <div class="row-fluid pitch">
       <div class="span5 offset1 video">
-        <img class="img-polaroid" src="http://placehold.it/480x300">
+        <img class="img-polaroid" src="product.png">
       </div>
 
       <!-- we define a new 'actions' div to contain statistics, order, and share buttons -->
@@ -157,17 +157,17 @@
                    different in horizontal and cvertical layouts, illustrating
                    media queries -->
               <div class="linediv-l">
-                <h3>1000</h3> <p>backers</p>
+                <h3>561</h3> <p>backers</p>
               </div>
             </div>
             <div class="span4">
               <div class="linediv-c">
-                <h3>$2000</h3> <p>of $10,000</p>
+                <h3>$10,000</h3> <p>of $50,000</p>
               </div>
             </div>
             <div class="span4">
               <div class="linediv-r">
-                <h3>40</h3> <p>days left</p>
+                <h3>68</h3> <p>days left</p>
               </div>
             </div>
           </div>
@@ -200,53 +200,31 @@
          http://placehold.it -->
     <div class="row-fluid section1">
       <div class="span5 offset1 asset">
-        <img class="img-polaroid" src="mym.png">
+        <img class="img-polaroid" src="firm.png">
       </div>
       <div class="span5 copy">
         <p>
-	  Your equipment in your firm is you capital. 
-	If one maschine does not work properly you will loose money.
-	So, keeping that equipment always up to date is very important.
-	Maintenance is a key feature for a prospering business.
+      	  Your equipment in your firm is you capital. 
+        	If one maschine does not work properly you will loose money.
+        	So, keeping that equipment always up to date is very important.
+        	Maintenance is a key feature for a prospering business.
+          </p>
+        <p>But how to keep an eye on all you devices?</p>
 
-	But how to keep an eye on all you devices?
-	Which one was exchanged last month?
-	When will be the next maintenance appointment?
-	 
-	
-          that is now 
-          an explanation
-          of the procuct
-          and their functions
-          in order of the priority
-          and usefullness
-          take the time
-          to write a 
-          good story
-          the better the better
-          or hire a good writer.
-        </p>
       </div>
     </div>
 
     <div class="row-fluid section2">
       <div class="span5 offset1 copy copy-right">
-        <p>
-          that is more 
-          text about
-          other stuff
-          that is usefull
-          and important
-          like copyright
-          and others
-          keep carefull to
-          get all important
-          specs of the
-          new product
-        </p>
+        <p>Several questions has to be answered each time:</p>
+        <p>"Which device will be get support next time?"</p>
+        <p>"Which maschine was exchanged last month?"</p>
+        <p>"Can I combine some maintenance appointments?"</p>
+        <p>ManageYourMaintainance can answer all this questions and will
+        help you to run your business more efficiency.</p>
       </div>
       <div class="span5 asset">
-        <img class="img-polaroid" src="http://placehold.it/480x300">
+        <img class="img-polaroid" src="overview.png">
       </div>
     </div>
 
@@ -261,12 +239,14 @@
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse"
                  data-parent="#accordion2" href="#collapseOne">
-                What does FAQ stand for?
+                How does it work?
               </a>
             </div>
             <div id="collapseOne" class="accordion-body collapse">
               <div class="accordion-inner">
-                Frequently Asked Question.
+                Each device will get a QR-Code. Scan that QR-Code and
+                fill in the maintainance intervalls. Additional data
+                can be stored to that device (photo, location).
               </div>
             </div>
           </div>
@@ -274,12 +254,13 @@
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse"
                  data-parent="#accordion2" href="#collapseTwo">
-                What's a Frequently Asked Question?
+                What do I need?
               </a>
             </div>
             <div id="collapseTwo" class="accordion-body collapse">
               <div class="accordion-inner">
-                A question which is commonly asked by users.
+                You need only a Mobile (iOS or Andriod) with Camera to scan the QR-Code and access to the internet.
+                The reports can be made on any browser.
               </div>
             </div>
           </div>
