picture from imgur.com

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     <div class="row-fluid pitch">
       <div class="span5 offset1 video">
-        <img class="img-polaroid" src="product.png">
+        <img class="img-polaroid" src="http://i.imgur.com/zCNx0li.png">
       </div>
 
       <!-- we define a new 'actions' div to contain statistics, order, and share buttons -->
@@ -200,7 +200,7 @@
          http://placehold.it -->
     <div class="row-fluid section1">
       <div class="span5 offset1 asset">
-        <img class="img-polaroid" src="firm.png">
+        <img class="img-polaroid" src="http://i.imgur.com/sHMGIJy.png"/>
       </div>
       <div class="span5 copy">
         <p>
@@ -224,7 +224,7 @@
         help you to run your business more efficiency.</p>
       </div>
       <div class="span5 asset">
-        <img class="img-polaroid" src="overview.png">
+        <img class="img-polaroid" src="http://i.imgur.com/PqKQAWL.png">
       </div>
     </div>
 
