--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
     </div>
     <div class="row-fluid pitch">
       <div class="span5 offset1 video">
-        <img class="img-polaroid" src="http://i.imgur.com/zCNx0li.png">
+        <img class="img-polaroid" src="http://i.imgur.com/zCNx0li.png" alt="product">
       </div>
 
       <!-- we define a new 'actions' div to contain statistics, order, and share buttons -->
       <div class="span5 actions">
         <div class="span8 offset2">
-          <div class="statistics">
+          <div class="row-fluid statistics">
             <div class="span4">
               <!-- linediv-l and linediv-r give dividing lines that look
                    different in horizontal and cvertical layouts, illustrating
@@ -172,12 +172,14 @@
             </div>
           </div>
         </div>
-        <div class="span10 offset1">
-          <!-- bootstrap progress bar
-               http://twitter.github.io/bootstrap/components.html#progress -->
-          <div class="thermometer progress active">
-            <div class="bar bar-success" style="width: 20%;"></div>
-            <div class="bar bar-warning" style="width: 80%;"></div>
+        <div class="row-fluid">
+          <div class="span10 offset1">
+            <!-- bootstrap progress bar
+                 http://twitter.github.io/bootstrap/components.html#progress -->
+            <div class="thermometer progress active">
+              <div class="bar bar-success" style="width: 20%;"></div>
+              <div class="bar bar-warning" style="width: 80%;"></div>
+            </div>
           </div>
         </div>
         <div class="span6 offset3 order">
@@ -200,7 +202,7 @@
          http://placehold.it -->
     <div class="row-fluid section1">
       <div class="span5 offset1 asset">
-        <img class="img-polaroid" src="http://i.imgur.com/sHMGIJy.png"/>
+        <img class="img-polaroid" src="http://i.imgur.com/sHMGIJy.png" alt="firm"/>
       </div>
       <div class="span5 copy">
         <p>
@@ -224,7 +226,7 @@
         help you to run your business more efficiency.</p>
       </div>
       <div class="span5 asset">
-        <img class="img-polaroid" src="http://i.imgur.com/PqKQAWL.png">
+        <img class="img-polaroid" src="http://i.imgur.com/PqKQAWL.png" alt="overview">
       </div>
     </div>
 
