--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
           <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fe5a6b6060f2e7"></script>
           <!-- AddThis Button END -->
 
+          <!-- bitcoin pay button -->
+<a class="coinbase-button" data-code="3e36677c8681622a8be74c73aab179ea" data-button-style="custom_large" href="https://coinbase.com/checkouts/3e36677c8681622a8be74c73aab179ea">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
         </div>
       </div>
     </div>
